--- a/index.html
+++ b/index.html
@@ -226,7 +226,10 @@
                                 <input type="email" class="input" name="email" placeholder="email address" required id="formemail">
                         </div>
                         <div class="status"></div>
-                        <button type="button" class="button_form" id="send-form">Submit</button>
+                        <div class="button_wrapper">
+                            <button type="button" class="button_form" id="send-form">Submit</button>
+                        </div>
+                        
                             
                         </form>
                     </div>
