--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
           /></a>
         </div>
         <div>
-          <a class="social_links_img" href="">
+          <a class="social_links_img" href="https://wa.me/918800110831">
             <img src="img/whatsapp.svg" alt=""
           /></a>
         </div>
         <div>
-          <a class="location" href="">
+          <a class="location" href="mailto:sehgalhomesproject@gmail.com">
             <img src="img/mail1.svg" alt="" />
           </a>
         </div>
         <div>
-          <a class="location" href="">
+          <a class="location" href="tel:+918800110831">
             <img src="img/phone1.svg" alt="" />
           </a>
         </div>
