--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       <div class="main_text_b">
         <h1>
-          Building Dreams <br />
+          Building Dreams, <br />
           Brick By Brick
         </h1>
       </div>
