--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="container">
       <div class="social_links">
         <div>
-          <a class="social_links_img" href="">
+          <a class="social_links_img" href="" title="location">
             <img src="img/location.svg" alt=""
           /></a>
         </div>
         <div>
-          <a class="social_links_img" href="https://wa.me/918800110831">
+          <a class="social_links_img" href="https://wa.me/918800110831" title="whatsapp">
             <img src="img/whatsapp.svg" alt=""
           /></a>
         </div>
@@ -36,7 +36,7 @@
       <div class="up_block">
         <header>
           <!-- Hamburger icon -->
-          <input class="side-menu" type="checkbox" id="side-menu" />
+          <input class="side-menu" type="checkbox" id="side-menu" title="side-menu"/>
           <label class="hamb" for="side-menu" id="menu_opener"
             ><span class="hamb-line"></span
           ></label>
@@ -62,11 +62,11 @@
                 >
               </li>
             </ul>
-            <li class="powered">
-              <a target="_blank" href="https://spectrumwise.tech"
+            <div class="powered">
+              <a target="_blank" href="https://spectrumwise.tech" rel="noopener"
                 >Powered by <span>SpecrumWise</span></a
               >
-            </li>
+            </div>
           </nav>
           <div class="main_text_block">
             <h1>Building Dreams, Brick By Brick</h1>
