--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/generel.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -194,7 +195,7 @@
                 everything you need through the day, giving you the energy to
                 stay ahead of time.
               </p>
-              <ul class="block3_list_items">
+              <ul class="block3_list_items" >
                 <li class="block3_item">
                   <div>
                     <img src="img/metro.svg" alt="" />
@@ -336,7 +337,6 @@
     <script src="scripts/jq_3.3.1.min.js"></script>
     <script src="scripts/validate.js"></script>
     <script src="scripts/check_form.js"></script>
-
     <script src="scripts/general.js"></script>
   </body>
 </html>
