--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="social_links">
         <div>
-          <a class="social_links_img" href="" title="location">
+          <a class="social_links_img" href="https://maps.app.goo.gl/jjHZLp6TccWW6hyA8" title="location" target="_blank">
             <img src="img/location.svg" alt=""
           /></a>
         </div>
