--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <img src="img/mail.svg" alt="" />
                   </div>
 
-                  <a href="mailto:sehgalhomesproject@gmail.com"
+                  <a id='email_a' href="mailto:sehgalhomesproject@gmail.com"
                     >sehgalhomesproject@gmail.com</a
                   >
                 </div>
@@ -327,7 +327,7 @@
         <div class="footer_block">
           <div></div>
           <div>© 2025 Sehgal Real Estate. All rights reserved.</div>
-          <a href="https://spectrumwise.tech"
+          <a id="powered_a" href="https://spectrumwise.tech"
             >Powered by <span>SpecrumWise</span>
           </a>
         </div>
